--- a/src/webparts/accordeon/components/Accordeon.module.scss
+++ b/src/webparts/accordeon/components/Accordeon.module.scss
@@ -32,3 +32,12 @@
     }
   }
 }
+
+.accordeonStyle {
+  border: 1px solid red;
+  background-color: blue;
+}
+
+.contentStyles {
+  background-color: yellow !important;
+}
